syntax = "proto3";

package responsive.controller.internal.v1.internal.proto;

import "responsive/controller/internal/v1/controller.proto";
import "responsive/controller/v1/controller.proto";

service Internal {
  rpc DumpState(DumpStateRequest) returns (EmptyResponse) {}
  rpc GetPolicy(GetPolicyRequest) returns (GetPolicyResponse) {}
  rpc CreateAction(InternalCreateActionRequest) returns (InternalCreateActionResponse) {}
  rpc GetActionStatus(InternalGetActionStatusRequest) returns (InternalGetActionStatusResponse) {}
}

message DumpStateRequest {
  optional string path = 1;
}

message InternalCreateActionRequest {
  responsive.controller.internal.v1.controller.proto.ApplicationId application_id = 1;
  responsive.controller.v1.controller.proto.Action action = 2;
}

message InternalCreateActionResponse {
  responsive.controller.v1.controller.proto.Action action = 1;
}

message InternalGetActionStatusRequest {
  responsive.controller.internal.v1.controller.proto.ApplicationId application_id = 1;
  string ation_id = 2;
}

message InternalGetActionStatusResponse {
  responsive.controller.v1.controller.proto.ActionStatus status = 1;
}

message GetPolicyRequest {
  responsive.controller.internal.v1.controller.proto.ApplicationId application_id = 1;
}

message GetPolicyResponse {
  responsive.controller.v1.controller.proto.ApplicationPolicySpec policy = 1;
}

message EmptyResponse {
}